--- a/index.html
+++ b/index.html
@@ -20,26 +20,30 @@
                 <form action="#" class="search">
                     <input type="text" class="search__input" placeholder="Search Hotels">
                     <button class="search__button">
-                        <svg class="search__icon">
-                            <use xlink:href="img/sprite.svg#magnifying-glass" ></use>
-                        </svg>
+                        <!-- <svg class="search__icon">
+                            <use xlink:href="img/sprite.svg#magnifying-glass"></use>
+                        </svg> -->
+                        <img src="img/svg/magnifying-glass.svg" alt="magnifying-glass" class="search__icon">
                     </button>
                 </form>
                 <nav class="user-nav">
                     <div class="user-nav__icon-box">
-                        <svg class="user-nav__icon">
+                        <!-- <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#bookmark"></use>
-                        </svg>
+                        </svg> -->
+                        <img src="img/svg/bookmark.svg" alt="bookmark">
                         <span class="user-nav__notification">7</span>
                     </div>
                     <div class="user-nav__icon-box">
-                        <svg class="user-nav__icon">
+                        <!-- <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#chat"></use>
-                        </svg>
+                        </svg> -->
+                        <img src="img/svg/chat.svg" alt="chat">
                         <span class="user-nav__notification">13</span>
                     </div>
                     <div class="user-nav__user">
                         <img src="img/user.jpg" alt="" class="user-nav__user-photo">
+                        <span class="user-nav__user-name">Fabian</span>
                     </div>
                 </nav>
             </header>
