--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                         <!-- <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#bookmark"></use>
                         </svg> -->
-                        <img src="img/svg/bookmark.svg" alt="bookmark">
+                        <img src="img/svg/bookmark.svg" alt="bookmark" class="user-nav__icon">
                         <span class="user-nav__notification">7</span>
                     </div>
                     <div class="user-nav__icon-box">
                         <!-- <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#chat"></use>
                         </svg> -->
-                        <img src="img/svg/chat.svg" alt="chat">
+                        <img src="img/svg/chat.svg" alt="chat" class="user-nav__icon">
                         <span class="user-nav__notification">13</span>
                     </div>
                     <div class="user-nav__user">
