side navigation animation complete

--- a/index.html
+++ b/index.html
@@ -52,8 +52,45 @@
             <!-- FLEX CONTAINER content--> 
             <div class="content"> 
                 <nav class="sidebar">
-                    Navigation
+                    <ul class="side-nav">
+                        <li class="side-nav__item side-nav__item--active">
+                            <a href="#" class="side-nav__link">
+                                <img src="img/svg/home.svg" alt="home" class="side-nav__icon">
+                                <!-- <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#home-2x" class="icon-home-2x"></use>
+                                </svg> -->
+                                <span>Hotel</span>
+                            </a>
+                        </li>
+
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <img src="img/svg/compass.svg" alt="compass" class="side-nav__icon">
+                                <span>Flight</span>
+                            </a>
+                        </li>
+
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <img src="img/svg/map.svg" alt="map" class="side-nav__icon">
+                                <span>Car Rental</span>
+                            </a>
+                        </li>
+
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <img src="img/svg/globe.svg" alt="globe" class="side-nav__icon">
+                                <span>Tours</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="legal">
+                        &copy; 2019 by Fabian Landeros
+                    </div>
                 </nav>
+
+
+
                 <main class="hotel-view">
                     Hotel View
                 </main>
