markup for overview heading

--- a/index.html
+++ b/index.html
@@ -92,7 +92,33 @@
 
 
                 <main class="hotel-view">
-                    Hotel View
+                    <div class="gallery">
+                       <figure class="gallery_item">
+                           <img src="img/adrian-spiegelt-261642-unsplash.jpg" alt="hotel photo 1" class="gallery__photo">
+                       </figure>
+
+                       <figure class="gallery_item">
+                            <img src="img/steve-roe-674209-unsplash.jpg" alt="hotel photo 2" class="gallery__photo">
+                        </figure>
+
+                        <figure class="gallery_item">
+                            <img src="img/steve-roe-685721-unsplash.jpg" alt="hotel photo 3" class="gallery__photo">
+                        </figure>
+                    </div>
+
+
+                    <div class="overview">
+                        <h1 class="overview__heading">
+                            Tokyo Cube Hotel
+                        </h1>
+                        <div class="overview__stars">
+                            <img src="img/svg/star.svg" alt="star" class="overview__stars__icon">
+                            <img src="img/svg/star.svg" alt="star" class="overview__stars__icon">
+                            <img src="img/svg/star.svg" alt="star" class="overview__stars__icon">
+                            <img src="img/svg/star.svg" alt="star" class="overview__stars__icon">
+                            <img src="img/svg/star.svg" alt="star" class="overview__stars__icon">
+                        </div>
+                    </div>
                 </main>
             </div>
         </div>
