resized images still not great. markup on hotel section

--- a/index.html
+++ b/index.html
@@ -55,16 +55,19 @@
                     <ul class="side-nav">
                         <li class="side-nav__item side-nav__item--active">
                             <a href="#" class="side-nav__link">
-                                <img src="img/svg/home.svg" alt="home" class="side-nav__icon">
                                 <!-- <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#home-2x" class="icon-home-2x"></use>
-                                </svg> -->
+                                    <use xlink:href="img/sprite.svg#account-login"></use>
+                                </svg>   -->
+                                <img src="img/svg/home.svg" alt="home" class="side-nav__icon">
                                 <span>Hotel</span>
                             </a>
                         </li>
 
                         <li class="side-nav__item">
                             <a href="#" class="side-nav__link">
+                                <!-- <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#compass"></use>
+                                </svg>  -->
                                 <img src="img/svg/compass.svg" alt="compass" class="side-nav__icon">
                                 <span>Flight</span>
                             </a>
@@ -94,15 +97,15 @@
                 <main class="hotel-view">
                     <div class="gallery">
                        <figure class="gallery_item">
-                           <img src="img/adrian-spiegelt-261642-unsplash.jpg" alt="hotel photo 1" class="gallery__photo">
+                           <img src="img/adrian-spiegelt-261642-unsplash.png" alt="hotel photo 1" class="gallery__photo">
                        </figure>
 
                        <figure class="gallery_item">
-                            <img src="img/steve-roe-674209-unsplash.jpg" alt="hotel photo 2" class="gallery__photo">
+                            <img src="img/steve-roe-674209-unsplash.png" alt="hotel photo 2" class="gallery__photo">
                         </figure>
 
                         <figure class="gallery_item">
-                            <img src="img/steve-roe-685721-unsplash.jpg" alt="hotel photo 3" class="gallery__photo">
+                            <img src="img/steve-roe-685721-unsplash.png" alt="hotel photo 3" class="gallery__photo">
                         </figure>
                     </div>
 
@@ -112,11 +115,20 @@
                             Tokyo Cube Hotel
                         </h1>
                         <div class="overview__stars">
-                            <img src="img/svg/star.svg" alt="star" class="overview__stars__icon">
-                            <img src="img/svg/star.svg" alt="star" class="overview__stars__icon">
-                            <img src="img/svg/star.svg" alt="star" class="overview__stars__icon">
-                            <img src="img/svg/star.svg" alt="star" class="overview__stars__icon">
-                            <img src="img/svg/star.svg" alt="star" class="overview__stars__icon">
+                            <img src="img/svg/star.svg" alt="star" class="overview__icon-star">
+                            <img src="img/svg/star.svg" alt="star" class="overview__icon-star">
+                            <img src="img/svg/star.svg" alt="star" class="overview__icon-star">
+                            <img src="img/svg/star.svg" alt="star" class="overview__icon-star">
+                            <img src="img/svg/star.svg" alt="star" class="overview__icon-star">
+                        </div>
+
+                        <div class="overview__location">
+                            <img src="img/svg/location.svg" alt="location" class="overview__icon-location">
+                            <button class="btn-inline">Tokyo, Japan</button>
+                        </div>
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">8.6</div>
+                            <div class="overview__rating-count">429 votes</div>
                         </div>
                     </div>
                 </main>
