--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <li class="side-nav__item">
                             <a href="#" class="side-nav__link">
                                 <!-- <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#compass"></use>
+                                    <use xlink:href="img/sprite.svg#compass" id="compass"></use>
                                 </svg>  -->
                                 <img src="img/svg/compass.svg" alt="compass" class="side-nav__icon">
                                 <span>Flight</span>
@@ -129,6 +129,41 @@
                         <div class="overview__rating">
                             <div class="overview__rating-average">8.6</div>
                             <div class="overview__rating-count">429 votes</div>
+                        </div>
+                    </div>
+
+                    <div class="detail">
+                        <div class="description">
+                            <p class="paragraph">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam placeat harum illum enim. Natus, laudantium temporibus quo maiores sit corporis aut nesciunt id accusamus repudiandae!
+                            </p>
+                            <p class="paragraph">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam placeat harum illum enim. Natus, laudantium temporibus quo maiores sit corporis aut nesciunt id accusamus repudiandae!
+                            </p>
+                            <ul class="list">
+                                <li class="list__item">Close to the beach</li>
+                                <li class="list__item">Breakfast included</li>
+                                <li class="list__item">Free airport shuttle</li>
+                                <li class="list__item">Free Wifi in all rooms</li>
+                                <li class="list__item">Air conditiong and heating</li>
+                                <li class="list__item">Pets allowed</li>
+                                <li class="list__item">We speak all languages</li>
+                                <li class="list__item">Perfect for families</li>
+                            </ul>
+                            <div class="recommend">
+                                <p class="recommend__count">
+                                    Lucy and 3 other friends recommend this hotel.
+                                </p>
+                                <div class="recommend__friends">
+                                    <img src="img/person3.png" alt="" class="recommend__photo">
+                                    <img src="img/person4.png" alt="" class="recommend__photo">
+                                    <img src="img/person1.png" alt="" class="recommend__photo">
+                                    <img src="img/person2.png" alt="" class="recommend__photo">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="user-reviews">
+                            User Reviews
                         </div>
                     </div>
                 </main>
